--- a/css/style.css
+++ b/css/style.css
@@ -473,17 +473,30 @@ header .carousel-indicators li {
 
 @media (max-width:768px) {
 	
-	header{
-		padding-bottom: 50px;
-		max-height: 480px;
-		height: 100%;
-	}
-	
-	.navbar-nav {
-		float: left;
-		text-align: left;
-}
+  header h1{
+    font-size: 46px;
+  }
 
+  header p.lead{
+    font-size: 26px;
+  }
+
+  header{
+    padding-bottom: 50px;
+    height: 100%;
+  }
+
+  .navbar-nav {
+    float: left;
+    text-align: left;
+  }
+
+  .logo{
+    display: block;
+    margin: auto;
+    width: 100px;
+    height: 100px;
+  }
 	
 }
 
@@ -514,7 +527,6 @@ header, .social{
 	
 header{
   padding-bottom: 50px;
-  min-height: 580px;
   height: 100%;
 }
 	
@@ -548,11 +560,12 @@ header{
 	
 	header h1{
     font-weight: 500;
-		font-size: 50px;
+		font-size: 36px;
 	}
   
   header p.lead{
-    font-size: 24px;
+    font-size: 20px;
+    font-weight: 500;
   }
 
 	.purchase{
@@ -561,13 +574,8 @@ header{
 
   header{
     padding-bottom: 50px;
-    min-height: 380px;
     height: 100%;
   }
-	
-	/*.features col-md-4{*/
-		/*margin-bottom: 50px;*/
-	/*}*/
 	
 }
 
