--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ header .carousel-indicators li {
 /*-----------------------------------------------------------------------------------*/
 
 .venue {
-  background: #4687B0;	
+  background: #FED359;	
 }
 .sponsors {
   background: #FED359;	
