Más speakers. Abrimos las inscripciones'

--- a/css/style.css
+++ b/css/style.css
@@ -741,3 +741,15 @@ header .carousel-indicators li {
 .ashwini {
   background: url(../img/speakers/ashwini.png) no-repeat;
 }
+
+.ricardo {
+  background: url(../img/speakers/Ricardo.jpg) no-repeat;
+}
+
+.juanpablo {
+  background: url(../img/speakers/juanpablo.jpg) no-repeat;
+}
+
+.martin {
+  background: url(../img/speakers/martin.jpg) no-repeat;
+}
