--- a/css/style.css
+++ b/css/style.css
@@ -753,3 +753,15 @@ header .carousel-indicators li {
 .martin {
   background: url(../img/speakers/martin.jpg) no-repeat;
 }
+
+.roberto {
+  background: url(../img/speakers/roberto.jpg) no-repeat;
+}
+
+.claudio {
+  background: url(../img/speakers/claudio.jpg) no-repeat;
+}
+
+.juanjo {
+  background: url(../img/speakers/juanjo.jpeg) no-repeat;
+}
