Flavio, Simon y Facundo

--- a/css/style.css
+++ b/css/style.css
@@ -765,3 +765,16 @@ header .carousel-indicators li {
 .juanjo {
   background: url(../img/speakers/juanjo.jpeg) no-repeat;
 }
+
+.simon {
+  background: url(../img/speakers/simon.jpeg) no-repeat;
+}
+
+.flavio {
+  background: url(../img/speakers/flavio.jpg) no-repeat;
+}
+
+.facundo {
+  background: url(../img/speakers/facundo.jpg) no-repeat;
+}
+
