--- a/css/style.css
+++ b/css/style.css
@@ -778,3 +778,14 @@ header .carousel-indicators li {
   background: url(../img/speakers/facundo.jpg) no-repeat;
 }
 
+.michael {
+  background: url(../img/speakers/michael.jpeg) no-repeat;
+}
+
+.felipe {
+  background: url(../img/speakers/felipe.png) no-repeat;
+}
+
+.david {
+  background: url(../img/speakers/david.jpg) no-repeat;
+}
