--- a/css/style.css
+++ b/css/style.css
@@ -787,5 +787,5 @@ header .carousel-indicators li {
 }
 
 .david {
-  background: url(../img/speakers/david.jpg) no-repeat;
+  background: url(../img/speakers/David.JPG) no-repeat;
 }
