--- a/css/style.css
+++ b/css/style.css
@@ -789,3 +789,11 @@ header .carousel-indicators li {
 .david {
   background: url(../img/speakers/David.JPG) no-repeat;
 }
+
+.mariano {
+  background: url(../img/speakers/mariano.jpg) no-repeat;
+}
+
+.julieta {
+  background: url(../img/speakers/julieta.jpg) no-repeat;
+}
