--- a/css/style.css
+++ b/css/style.css
@@ -797,3 +797,7 @@ header .carousel-indicators li {
 .julieta {
   background: url(../img/speakers/julieta.jpg) no-repeat;
 }
+
+.pamela {
+  background: url(../img/speakers/pamela.png) no-repeat;
+}
