Casi los últimos speakers y sacamos que Eventbrite co-organiza. :gun: Nos encanta mentir.

--- a/css/style.css
+++ b/css/style.css
@@ -801,3 +801,15 @@ header .carousel-indicators li {
 .pamela {
   background: url(../img/speakers/pamela.png) no-repeat;
 }
+
+.guillermo {
+  background: url(../img/speakers/guillermo.png) no-repeat;
+}
+
+.sofia {
+  background: url(../img/speakers/sofia.png) no-repeat;
+}
+
+.marcos {
+  background: url(../img/speakers/marcos.png) no-repeat;
+}
