Último speaker confirmado

--- a/css/style.css
+++ b/css/style.css
@@ -811,5 +811,5 @@ header .carousel-indicators li {
 }
 
 .marcos {
-  background: url(../img/speakers/marcos.png) no-repeat;
+  background: url(../img/speakers/marcos.jpg) no-repeat;
 }
