--- a/css/style.css
+++ b/css/style.css
@@ -128,12 +128,12 @@ nav.navbar.fixed-to-top{
   border: none;
   border-bottom: 1px solid #eee;
   background: #fff;
-  opacity: 0.95;
+  opacity: 0.75;
   display: none;
 }
 
 .navbar-default .navbar-nav>li>a {
-  color: #aaa;
+  color: #000;
   font-size: 1.2em;
 }
 
