Arreglamos el grid con el taller de DjangoGirls

--- a/css/style.css
+++ b/css/style.css
@@ -846,3 +846,11 @@ header .carousel-indicators li {
 .emilio {
   background: url(../img/emilio.png) no-repeat;
 }
+
+.linuxchi {
+  background: url(../img/speakers/linuxchi.png) no-repeat;
+}
+
+.argentinaenpython {
+  background: url(../img/speakers/argentinaenpython.png) no-repeat;
+}
