Charla de Conti

--- a/css/style.css
+++ b/css/style.css
@@ -865,3 +865,7 @@ header .carousel-indicators li {
 .argentinaenpython {
   background: url(../img/speakers/argentinaenpython.png) no-repeat;
 }
+
+.jjconti {
+  background: url(../img/speakers/juanjo-conti.jpg) no-repeat;
+}
