Lista la agenda. Agregada charla de Carlos De La Torre

--- a/css/style.css
+++ b/css/style.css
@@ -869,3 +869,7 @@ header .carousel-indicators li {
 .jjconti {
   background: url(../img/speakers/juanjo-conti.jpg) no-repeat;
 }
+
+.delatorre {
+  background: url(../img/speakers/Carlos_2.JPG) no-repeat;
+}
